--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".HomeActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.FinalProject.NoActionBar" />
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
