product detail layout, unable to add the dependency

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,17 @@
 
     <application
         android:allowBackup="true"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:replace="android:theme"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProject"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ProductDetailsActivity"
+            android:exported="false" />
         <activity
             android:name=".SettingActivity"
             android:exported="false" />
